<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="edu.bellevue.cs470.databasestorage.MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <EditText
            android:id="@+id/place_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/place_name_hint"
            android:textSize="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <EditText
            android:id="@+id/address_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:textSize="10dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        </LinearLayout>

        <EditText
            android:id="@+id/comments_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint"
            android:textSize="10dp"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_marginRight="7dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/photoButton"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="#008080"
                    android:textSize="10dp"
                    android:text="Take Photo"
                    android:textColor="#fff"
                    android:onClick="dispatchTakePictureIntent"/>

                <Button
                    android:id="@+id/add_to_waitlist_button"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorPrimary"
                    android:onClick="addToWeekendLog"
                    android:text="@string/add_button_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />

            </LinearLayout>

        </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_guests_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
</LinearLayout>